feat: APM告警模板开发

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/detect-rules/threshold.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/detect-rules/threshold.scss
@@ -7,6 +7,10 @@
     .level-icon {
       margin-left: 8px;
 
+      .icon-monitor {
+        margin-right: 5px;
+      }
+
       .icon-danger {
         color: #e71818;
       }
