--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/detect-rules/threshold.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/detect-rules/threshold.scss
@@ -52,3 +52,24 @@
     }
   }
 }
+
+.method-list {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border: 1px solid #dcdee5;
+  border-radius: 2px;
+
+  .method-item {
+    display: flex;
+    flex: 0 0 32px;
+    align-items: center;
+    padding: 0 15px;
+
+    &:hover {
+      color: #3a84ff;
+      cursor: pointer;
+      background-color: #e1ecff;
+    }
+  }
+}
