--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
@@ -92,7 +92,9 @@
       align-items: center;
 
       .type-icon {
+        display: inline-flex;
         flex-shrink: 0;
+        align-items: center;
         width: 16px;
         height: 16px;
         color: #a3b1cc;
@@ -187,17 +189,29 @@
 
     .operator-col {
       display: flex;
-      column-gap: 12px;
+      column-gap: 10px;
       align-items: center;
       color: #3a84ff;
 
       .more-btn {
         display: flex;
         align-items: center;
-        width: 22px;
-        height: 22px;
+        justify-content: center;
+        width: 20px;
+        height: 20px;
         font-size: 14px;
         cursor: pointer;
+        border-radius: 50%;
+
+        &:hover {
+          background: #ddd;
+        }
+      }
+
+      .tippy-active {
+        .more-btn {
+          background: #ddd;
+        }
       }
     }
   }
@@ -214,6 +228,36 @@
     .common-table-skeleton-row {
       &:nth-child(1) {
         display: none;
+      }
+    }
+  }
+}
+
+.apm-alarm-template-popover-theme {
+  .more-btn-list {
+    display: flex;
+    flex-direction: column;
+    width: 68px;
+    padding: 4px 0;
+
+    .more-btn-item {
+      display: flex;
+      flex: 0 0 32px;
+      align-items: center;
+      justify-content: center;
+      font-size: 12px;
+      color: #4d4f56;
+      cursor: pointer;
+
+      &.is-active,
+      &:hover {
+        color: #3a84ff;
+        background: #e1ecff;
+      }
+
+      &.disabled {
+        color: #c4c6cc;
+        cursor: not-allowed;
       }
     }
   }
