--- a/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/template-list.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/template-list.scss
@@ -29,6 +29,9 @@
 
       .category-item-checkbox {
         margin-bottom: 11px;
+        font-weight: 700;
+        font-size: 12px;
+        color: #4D4F56;
       }
 
       &:last-child {
