feat: apm告警模板下发侧栏&一键添加策略侧栏功能

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
@@ -14,6 +14,16 @@
     .template-list {
       width: 449px;
       padding: 12px 24px 0;
+
+      .template-list-loading {
+        margin-bottom: 24px;
+
+        .template-list-loading-item {
+          width: auto;
+          height: 32px;
+          margin-bottom: 4px;
+        }
+      }
     }
 
     .template-preview {
