--- a/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/template-details.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/template-details.scss
@@ -70,6 +70,26 @@
       .relation-service-alarm {
         padding: 16px 40px;
       }
+
+      .basic-loading {
+        padding: 24px 40px;
+
+        .basic-loading-item {
+          position: relative;
+          margin-bottom: 24px;
+
+          .item-top {
+            width: 48px;
+            height: 20px;
+            margin-bottom: 4px;
+          }
+
+          .item-bottom {
+            width: 100%;
+            height: 20px;
+          }
+        }
+      }
     }
   }
 }
