--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step3/collect-issued-slider.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step3/collect-issued-slider.scss
@@ -9,6 +9,11 @@
             font-size: 12px;
             padding: 0 8px;
             color: #4D4F56;
+            .alert-icon {
+               color: #EA3636; 
+               font-size: 14px;
+               margin-right: 8px;
+            }
         }
         .collect-issued-slider-tab {
             margin-top: 12px;
