feat: apm告警模板开发-表格中告警组列-tag最大宽度设置为160内容溢出时显示省略号 # Reviewed, transaction id: 59056

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
@@ -184,6 +184,13 @@
       .bk-common-v2-tag-show {
         .item-tags {
           flex-wrap: nowrap;
+
+          .user-group-item {
+            max-width: 160px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
         }
       }
     }
