feat: 解决一些样式以及表单项校验问题

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/common-form/edit-variable-value.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/common-form/edit-variable-value.scss
@@ -1,6 +1,10 @@
 .edit-variable-value {
   min-width: 240px;
 
+  .bk-tooltip-ref {
+    height: 100%;
+  }
+
   .variable-value {
     display: flex;
     width: 100%;
