feat: 详情增加loading展示

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form.scss
@@ -48,3 +48,15 @@
     margin-top: 24px;
   }
 }
+
+.template-form-skeleton-wrap {
+  padding-left: 40px;
+  
+  .skeleton-element {
+    height: 20px;
+
+    &+.skeleton-element {
+      margin-top: 16px;
+    }
+  }
+}
