--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
@@ -257,6 +257,14 @@
       color: #4d4f56;
       cursor: pointer;
 
+      & > div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+      }
+
       &.is-active,
       &:hover {
         color: #3a84ff;
