feat: 日志管理 - 采集接入重构-接口联调

--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/base-info.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/base-info.scss
@@ -4,4 +4,11 @@
     .category-form-item {
         width: 100% !important;
     }
+    .auto-convert {
+        position: absolute;
+        right: -80px;
+        font-size: 14px;
+        color: #3a84ff;
+        cursor: pointer;
+    }
 }
