--- a/bklog/web/src/views/manage-v2/log-collection/components/create-operation/step2-bk-data-collection.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/create-operation/step2-bk-data-collection.scss
@@ -13,8 +13,9 @@
       width: 45%;
     }
     .time-field {
-      line-height: 30px;
+      line-height: 32px;
       color: #63656e;
+      font-size: 12px;
     }
   }
   .field-setting-box {
