feat: 日志管理 - 采集接入重构-接口联调

--- a/bklog/web/src/views/manage-v2/log-collection/components/create-operation/index.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/create-operation/index.scss
@@ -80,6 +80,7 @@
     padding-left: 16px;
     position: fixed;
     bottom: 0;
+    z-index: 2;
     box-shadow:
       3px 3px #00000014,
       -30px 0 10px #c6c6c7;
