--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/add-group-table.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/add-group-table.scss
@@ -52,7 +52,7 @@
                 display: flex;
                 height: 42px;
                 .item-default {
-                    width: 30%;
+                    flex: 1;
                     border-right: 1px solid #dfe0e5;
                     display: flex;
                     align-items: center;
