--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/metric/components/metric-selector.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/metric/components/metric-selector.scss
@@ -1,6 +1,12 @@
 .metric-selector {
   display: flex;
+  flex: 1;
   align-items: center;
+  width: 100%;
+
+  &-trigger {
+    width: 100%;
+  }
 
   &-content {
     display: flex;
