feat: 日志管理 - 采集接入重构-接口联调

--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/device-metadata.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/device-metadata.scss
@@ -24,7 +24,7 @@
                 width: calc(100% - 62px);
             }
             .icons {
-                color: #c4c6cb;
+                color: #979BA5;
                 font-size: 18px;
                 margin-left: 8px;
                 cursor: pointer;
