feat: 日志管理 - 采集接入重构-接口联调

--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/container-collection/append-log-tags.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/container-collection/append-log-tags.scss
@@ -19,6 +19,10 @@
             font-size: 18px;
             margin-left: 8px;
             cursor: pointer;
+            &.disabled {
+                cursor: not-allowed;
+                color: #c4c6cc;
+            }
         }
         .extra-error {
             .bk-form-input {
