--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/device-metadata.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step2/device-metadata.scss
@@ -28,6 +28,10 @@
                 font-size: 18px;
                 margin-left: 8px;
                 cursor: pointer;
+                &.disabled {
+                    cursor: not-allowed;
+                    color: #c4c6cc;
+                }
             }
             .symbol {
                 color: #ff9c01;
