--- a/bklog/web/src/views/manage-v2/log-collection/components/common-comp/input-add-group.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/common-comp/input-add-group.scss
@@ -10,6 +10,10 @@
             font-size: 18px;
             margin-left: 8px;
             cursor: pointer;
+            &.disabled {
+                cursor: not-allowed;
+                color: #c4c6cc;
+            }
         }
     }
 }
