--- a/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
@@ -28,7 +28,7 @@
 
     .template-preview {
       flex: 1;
-      padding: 12px 0;
+      padding: 12px 24px 12px 0;
       overflow: hidden;
       background: #FAFBFD;
       border-left: 1px solid #DCDEE5;
