feat: apm告警模板列表增加分页逻辑 # Reviewed, transaction id: 59864

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/alarm-template-table/alarm-template-table.scss
@@ -20,7 +20,8 @@
     &.table-loading-active {
       .bk-table-body-wrapper,
       .bk-table-fixed,
-      .bk-table-fixed-right {
+      .bk-table-fixed-right,
+      .bk-table-pagination-wrapper {
         display: none;
       }
     }
