feat: apm 告警模板下发侧栏&一键添加策略优化

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
@@ -13,7 +13,9 @@
 
     .template-list {
       width: 449px;
-      padding: 12px 24px 0;
+      max-height: 100%;
+      padding: 12px 24px;
+      overflow: auto;
 
       .template-list-loading {
         margin-bottom: 24px;
