--- a/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/relation-service-table.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/relation-service-table.scss
@@ -51,9 +51,9 @@
         align-items: center;
         height: 32px;
         padding: 8px 10px;
-        color: #4D4F56;
-        background: #F0F5FF;
-        border: 1px solid #A3C5FD;
+        color: #4d4f56;
+        background: #f0f5ff;
+        border: 1px solid #a3c5fd;
         border-radius: 2px;
 
         .icon-hint {
@@ -64,7 +64,7 @@
         .icon-mc-close {
           margin: 0 0 0 auto;
           font-size: 18px;
-          color: #C4C6CC;
+          color: #c4c6cc;
           cursor: pointer;
         }
       }
@@ -92,11 +92,6 @@
         }
       }
 
-      .service-name {
-        display: flex;
-        align-items: center;
-      }
-
       .diff-btn {
         display: flex;
         align-items: center;
@@ -104,15 +99,17 @@
         width: 20%;
         max-width: 20%;
         margin: 0 0 0 auto;
-        overflow: hidden;
+        overflow: visible;
         color: #3a84ff;
+        white-space: nowrap;
         cursor: pointer;
       }
 
       .no-diff {
         margin: 0 15px 0 auto;
-        overflow: hidden;
-        color: #C4C6CC;
+        overflow: visible;
+        color: #c4c6cc;
+        white-space: nowrap;
       }
 
       .relation-strategy-content {
@@ -203,6 +200,32 @@
           width: 100%;
           height: 140px;
           margin: auto;
+        }
+      }
+
+      .service-name {
+        display: flex;
+        align-items: center;
+
+        .service-name-text {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+
+        .strategy-link-relation {
+          margin: 0 42px 0 auto;
+          color: #3a84ff;
+          white-space: nowrap;
+          cursor: pointer;
+        }
+
+        .no-diff {
+          margin: 0 15px 0 0;
+        }
+
+        .diff-btn {
+          margin: 0;
         }
       }
     }
