--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form-detail.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form-detail.scss
@@ -4,9 +4,14 @@
   .form-item {
     line-height: 20px;
 
-    .label {
+    .form-item-label {
       font-size: 12px;
       color: #979ba5;
+
+      .tooltips-label {
+        cursor: pointer;
+        border-bottom: 1px dashed #979ba5;
+      }
     }
 
     .content {
@@ -31,15 +36,13 @@
         .tag-item {
           height: 22px;
           padding: 0 8px;
+          margin-right: 4px;
+          margin-bottom: 4px;
           font-size: 12px;
           line-height: 22px;
           color: #4d4f56;
           background: #f0f1f5;
           border-radius: 2px;
-
-          & + .tag-item {
-            margin-left: 4px;
-          }
         }
       }
     }
