--- a/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/quick-add-strategy/quick-add-strategy.scss
@@ -28,7 +28,7 @@
 
     .template-preview {
       flex: 1;
-      padding: 12px 24px 12px 0;
+      padding: 12px 0;
       overflow: hidden;
       background: #FAFBFD;
       border-left: 1px solid #DCDEE5;
@@ -78,6 +78,7 @@
 
       .template-preview-content {
         height: calc(100% - 20px);
+        padding: 0 24px 0 12px;
         margin-top: 19px;
         overflow: auto;
 
