--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-value-detail.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-value-detail.scss
@@ -60,16 +60,13 @@
     .tag-item {
       height: 22px;
       padding: 0 4px;
-      margin-top: 2px;
+      margin-right: 4px;
+      margin-bottom: 4px;
       font-size: 12px;
       line-height: 22px;
       color: #4d4f56;
       background: #f0f1f5;
       border-radius: 2px;
-
-      & + .tag-item {
-        margin-left: 2px;
-      }
     }
   }
 }
