--- a/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/relation-service-table.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/relation-service-table.scss
@@ -168,6 +168,11 @@
             & > .title {
               margin-bottom: 4px;
               color: #979ba5;
+
+              &.tips {
+                display: inline-block;
+                border-bottom: 1px dashed #979ba5;
+              }
             }
 
             & > .content {
